# Simple-2DEngine

./: 2dEngine  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
engine/: Camera.cpp  Camera.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  IGameState.h  IObject.h  LevelFunctions.cpp  LevelFunctions.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Window.cpp  Window.h  globals.cpp  globals.h
levels/: level1
source/: DialogBox.cpp  DialogBox.h  ImGuiLayer.cpp  ImGuiLayer.h  MainClass.cpp  MainClass.h  Player.cpp  Player.h  StateMachine.cpp  StateMachine.h  constants.h  main.cpp
source/states/: ExitState.cpp  ExitState.h  Level1.cpp  Level1.h  MenuState.cpp  MenuState.h
